--- a/index.html
+++ b/index.html
@@ -675,7 +675,62 @@
 </ul>
 </div>
 </div>
-<div class="border-t border-white/5 pt-8 text-center text-gray-600 text-sm">
+<div class="border-t border-white/5 pt-12">
+            <!-- Contact Information Section -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
+              <!-- Name -->
+              <div class="glass-card p-6 rounded-xl hover:bg-primary/5 transition-all duration-300">
+                <div class="flex items-center gap-3 mb-3">
+                  <div class="p-2 bg-primary/10 rounded-lg">
+                    <span class="material-symbols-outlined text-primary">person</span>
+                  </div>
+                  <span class="text-gray-500 text-xs uppercase font-semibold tracking-wider">Name</span>
+                </div>
+                <p class="text-white font-medium">Mohd Rehan</p>
+              </div>
+
+              <!-- Phone -->
+              <div class="glass-card p-6 rounded-xl hover:bg-primary/5 transition-all duration-300">
+                <div class="flex items-center gap-3 mb-3">
+                  <div class="p-2 bg-primary/10 rounded-lg">
+                    <span class="material-symbols-outlined text-primary">phone</span>
+                  </div>
+                  <span class="text-gray-500 text-xs uppercase font-semibold tracking-wider">Phone</span>
+                </div>
+                <a href="tel:6388529445" class="text-white font-medium hover:text-primary transition-colors">
+                  +91 6388529445
+                </a>
+              </div>
+
+              <!-- Email -->
+              <div class="glass-card p-6 rounded-xl hover:bg-primary/5 transition-all duration-300">
+                <div class="flex items-center gap-3 mb-3">
+                  <div class="p-2 bg-primary/10 rounded-lg">
+                    <span class="material-symbols-outlined text-primary">mail</span>
+                  </div>
+                  <span class="text-gray-500 text-xs uppercase font-semibold tracking-wider">Email</span>
+                </div>
+                <a href="mailto:m4701712@gmail.com" class="text-white font-medium hover:text-primary transition-colors break-all">
+                  m4701712@gmail.com
+                </a>
+              </div>
+
+              <!-- Address -->
+              <div class="glass-card p-6 rounded-xl hover:bg-primary/5 transition-all duration-300">
+                <div class="flex items-center gap-3 mb-3">
+                  <div class="p-2 bg-primary/10 rounded-lg">
+                    <span class="material-symbols-outlined text-primary">location_on</span>
+                  </div>
+                  <span class="text-gray-500 text-xs uppercase font-semibold tracking-wider">Location</span>
+                </div>
+                <p class="text-white font-medium">Naini, Prayagraj</p>
+                <p class="text-gray-500 text-sm">Uttar Pradesh 211008</p>
+              </div>
+            </div>
+
+            <!-- Bottom divider and copyright -->
+            <div class="text-center text-gray-600 text-sm pt-8 border-t border-white/5">
+              <p>&copy; 2025 AttendancePro. All rights reserved. | Developed by Mohd Rehan</p>
             </div>
         </div>
     </div>
